Fixing line height and z-index from Kanye image

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@ White: #FFF */
 html {
     font-size: 35px;
     font-family: 'Montserrat', sans-serif;
-    line-height: 1.5em;
     font-weight: 300;
     color: #1A1A1A;
     font-weight: 300;
@@ -37,6 +36,10 @@ h2 {
 h3 {
     font-weight: bold;
     margin: 50px 0;
+}
+
+p {
+    line-height: 150%;
 }
 
 /* Navbar */
@@ -92,7 +95,6 @@ nav {
 }
 
 #header p {
-    line-height: 1.5em;
     font-weight: 300;
     font-size: 1.2rem;
 }
@@ -188,7 +190,7 @@ nav {
     left: 60%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: .9;
 }
 
 #green .spotify-logo img {
